--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>hello</title>
     </head>
     <body>
-        <h1>hello mamoon!!!</h1>
+        <h1>hello mamoon!</h1>
     </body>
 </html>
